--- a/style.css
+++ b/style.css
@@ -8,11 +8,16 @@ header{
     padding: 20px 0;
 }
 
-nav {
+nav ul {
     position: absolute;
     right: 70px;
     top: 30px;
     margin: 0 auto;
+}
+
+.squad-11{
+    font-size: 40px;
+    margin-left: 200px;
 }
 
 nav li {
@@ -29,37 +34,87 @@ nav a {
     letter-spacing: 2.5px;
 }
 
-nav a:hover {
+nav .link:hover {
     color: #BD4B4B;
     transition: 0.4s;
 }
 
-.fundo-sobre {
-    background: #EEEEEE;
-    height: 650px;
-    padding: 20px 0;
-}
-
-.titulo-sobre {
+.titulo {
     text-transform: uppercase;
     text-align: center;
     font-weight: bold;
     font-size: 40px;
     margin: 0.5em 0 1.5em;
-    color: #EFB7B7;
     letter-spacing: 2.5px;
     clear: left;
 }
 
-.sobre p:first-child {
+.fundo-squad{
+    background-color: #c05f5f;
+    width: 100%;
+    height: 500px;
+    padding: 100px 0px;
+}
+
+.informacoes p{
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 2.5px;
+    font-weight: bolder;
+    font-size: 30px;
+    color: white;
+    margin: 0px auto 20px;
+}
+
+#icone{
+    display: block;
+    width: 25%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
+}
+
+.fundo-portfolio{
+    background-color: white;
+    width: 100%;
+    height: 500px;
+}
+
+h1, h3{
+    color: #EFB7B7;
+}
+
+.fundo-sobre {
+    background: #c0c0c0;
+    height: 500px;
+    padding: 20px 0;
+    width: 100%;
+}
+
+h2{
+    color: white;
+}
+
+#sobre p{
+    height: 134px;
+    padding: 20px 30px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    color: white;
+}
+#sobre-ale{
     text-align: left;
-    margin: -20px 50px 1em;   
+}
+
+#sobre-duda{
+    text-align: right;
 }
 
 .foto-perfil-1 {
     display: block;
     width: 10%;
-    margin: 20px 200px;
+    margin: 20px 70px 20px 200px;
     border-radius: 500px;
     opacity: 0.8;
     transition: 400ms;
@@ -69,12 +124,19 @@ nav a:hover {
 .foto-perfil-2 {
     display: block;
     width: 10%;
-    margin: 200px 1500px;
+    margin: 20px 200px 20px 70px;
     border-radius: 500px;
     opacity: 0.8;
     transition: 400ms;
+    float: right;
 }
 
 .foto-perfil-1:hover, .foto-perfil-2:hover {
     opacity: 1;
+}
+
+.fundo-contato{
+    background-color: white;
+    width: 100%;
+    height: 500px;
 }
